--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "lint:staged": "lint-staged",
+    "prettier": "prettier .",
+    "prettier:write": "prettier . --write"
   },
   "dependencies": {
     "next": "^12.1.6",
@@ -23,6 +26,15 @@
     "@types/react-dom": "^18.0.4",
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
+    "eslint-plugin-prettier": "^4.0.0",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx}": [
+      "eslint . --quiet --fix",
+      "prettier . --write"
+    ]
   }
 }
