--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,16 @@
   "dependencies": {
     "next": "^12.1.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "styled-components": "^5.3.5",
+    "styled-theming": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-theming": "^2.2.5",
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
     "eslint-plugin-prettier": "^4.0.0",
