--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@storybook/addon-actions": "^6.5.5",
+    "@storybook/addon-contexts": "^5.3.21",
     "@storybook/addon-essentials": "^6.5.5",
     "@storybook/addon-interactions": "^6.5.5",
     "@storybook/addon-links": "^6.5.5",
