--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "lint:fix": "next lint --fix",
     "lint:staged": "lint-staged",
     "prettier": "prettier .",
-    "prettier:write": "prettier . --write"
+    "prettier:write": "prettier . --write",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "next": "^12.1.6",
@@ -23,14 +25,26 @@
     "styled-theming": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@storybook/addon-actions": "^6.5.5",
+    "@storybook/addon-contexts": "^5.3.21",
+    "@storybook/addon-essentials": "^6.5.5",
+    "@storybook/addon-interactions": "^6.5.5",
+    "@storybook/addon-links": "^6.5.5",
+    "@storybook/builder-webpack5": "^6.5.5",
+    "@storybook/manager-webpack5": "^6.5.5",
+    "@storybook/react": "^6.5.5",
+    "@storybook/testing-library": "^0.0.11",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@types/styled-components": "^5.1.25",
     "@types/styled-theming": "^2.2.5",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-storybook": "^0.5.12",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
