--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,5 +16,5 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", ".storybook", "stories"]
+  "exclude": ["node_modules", ".storybook", "**/*.stories.$(tsx|mdx)"]
 }
