--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -42,5 +42,7 @@ jobs:
         run: yarn lint
       - name: Run prettier
         run: yarn prettier
+      - name: Run tests
+        run: yarn test:ci
       - name: Build app
         run: yarn build
