--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,16 +6,20 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:staged": "lint-staged",
     "prettier": "prettier . --quiet",
     "prettier:write": "prettier . --quiet --write",
+    "start": "next start",
     "storybook": "start-storybook -s ./public -p 6006",
-    "storybook:build": "build-storybook -s ./public"
+    "storybook:build": "build-storybook -s ./public",
+    "test": "jest --watch",
+    "test:update": "jest -u",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "next": "^12.1.6",
@@ -36,9 +40,11 @@
     "@storybook/manager-webpack5": "^6.5.5",
     "@storybook/react": "^6.5.5",
     "@storybook/testing-library": "^0.0.11",
+    "@testing-library/jest-dom": "^5.16.4",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "@types/styled-theming": "^2.2.5",
     "babel-loader": "^8.2.5",
@@ -48,9 +54,12 @@
     "eslint-plugin-storybook": "^0.5.12",
     "i18next": "^21.8.4",
     "i18next-http-backend": "^1.4.1",
+    "jest": "^28.1.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "react-i18next": "^11.16.9",
+    "react-test-renderer": "^18.1.0",
+    "ts-jest": "^28.0.3",
     "typescript": "^4.6.4"
   },
   "lint-staged": {
