--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -43,6 +43,11 @@ jobs:
       - name: Run prettier
         run: yarn prettier
       - name: Run tests
-        run: yarn test:ci
+        run: yarn test:ci --coverage
       - name: Build app
         run: yarn build
+      - name: Upload coverage to Codecov
+        if: github.ref == 'refs/heads/main'
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
