fix: test coverage

--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -47,7 +47,8 @@ jobs:
       - name: Build app
         run: yarn build
       - name: Upload coverage to Codecov
-        if: github.ref == 'refs/heads/main'
+        # TODO: Re-add this
+        # if: github.ref == 'refs/heads/main'
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
