devops: try trigger

--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -19,7 +19,7 @@ defaults:
     working-directory: frontend
 
 jobs:
-  lint:
+  build:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     strategy:
