--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -6,12 +6,14 @@ on:
       - main
       - develop
     paths:
+      - '.github/workflows/build-frontend.yml'
       - 'frontend/**'
   pull_request:
     branches:
       - main
       - develop
     paths:
+      - '.github/workflows/build-frontend.yml'
       - 'frontend/**'
 
 defaults:
