--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", ".storybook", "utils-test", "**/__stories__/**", "**/__tests__/**", "**/__stubs__/**"]
+  "include": ["next-env.d.ts", "**/src/*.ts", "**/src/*.tsx"],
+  "exclude": ["node_modules", ".storybook", "utils-test", "**/src/__stories__/**", "**/src/__tests__/**", "**/src/__stubs__/**"]
 }
