--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,5 +16,12 @@
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/src/*.ts", "**/src/*.tsx"],
-  "exclude": ["node_modules", ".storybook", "utils-test", "**/src/__stories__/**", "**/src/__tests__/**", "**/src/__stubs__/**"]
+  "exclude": [
+    "node_modules",
+    ".storybook",
+    "utils-test",
+    "**/src/__stories__/**",
+    "**/src/__tests__/**",
+    "**/src/__stubs__/**"
+  ]
 }
