--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "react-i18next": "^11.16.9",
     "react-test-renderer": "^18.1.0",
     "ts-jest": "^28.0.3",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.6.4"
   },
   "lint-staged": {
