--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,7 +16,7 @@
     "strict": true,
     "target": "es5"
   },
-  "include": ["next-env.d.ts", "**/src/*.ts", "**/src/*.tsx"],
+  "include": ["next-env.d.ts", "./src"],
   "exclude": [
     "node_modules",
     ".storybook",
