--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "prettier-plugin-multiline-arrays": "^1.0.0",
     "react-i18next": "^11.16.9",
     "react-test-renderer": "^18.1.0",
     "ts-jest": "^28.0.3",
