--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "devDependencies": {
     "husky": "^7.0.0",
     "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2",
-    "prettier-plugin-multiline-arrays": "^1.0.0"
+    "prettier": "^2.6.2"
   },
   "lint-staged": {
     "*.{md,yml,yaml,json}": [
