--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-functional": "^4.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prefer-type-alias": "^0.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-storybook": "^0.5.12",
     "i18next": "^21.8.4",
