--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -42,6 +42,8 @@ jobs:
         run: yarn
       - name: Run lint
         run: yarn lint
+      - name: Run lint styles
+        run: yarn lint:style
       - name: Run prettier
         run: yarn prettier
       - name: Run tests with coverage
