--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@storybook/manager-webpack5": "^6.5.5",
     "@storybook/react": "^6.5.5",
     "@storybook/testing-library": "^0.0.11",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/node": "^17.0.35",
@@ -66,6 +67,8 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.4.1",
+    "postcss": "^8.4.14",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.6.2",
     "react-i18next": "^11.16.9",
     "react-test-renderer": "^18.1.0",
