--- a/package.json
+++ b/package.json
@@ -6,17 +6,22 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "lint:ls": "ls-lint",
     "lint:staged": "lint-staged",
     "prepare": "husky install",
     "prettier": "prettier .",
     "prettier:write": "prettier . --write"
   },
   "devDependencies": {
+    "@ls-lint/ls-lint": "^1.11.2",
     "husky": "^7.0.0",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2"
   },
   "lint-staged": {
+    "*": [
+      "ls-lint"
+    ],
     "*.{md,yml,yaml,json}": [
       "prettier . --write"
     ]
