--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,17 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:staged": "lint-staged",
+    "lint:styles": "stylelint src/**/*.{ts,tsx}",
+    "lint:styles:fix": "stylelint src/**/*.{ts,tsx} --fix",
     "prettier": "prettier .",
     "prettier:write": "prettier . --write",
     "start": "next start",
     "storybook": "start-storybook -s ./public -p 6006",
     "storybook:build": "build-storybook -s ./public",
     "test": "jest --watch",
-    "test:update": "jest -u",
+    "test:ci": "jest --ci",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --ci"
+    "test:update": "jest -u"
   },
   "dependencies": {
     "next": "^12.1.6",
@@ -40,6 +42,7 @@
     "@storybook/manager-webpack5": "^6.5.5",
     "@storybook/react": "^6.5.5",
     "@storybook/testing-library": "^0.0.11",
+    "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@types/node": "^17.0.35",
@@ -54,7 +57,9 @@
     "eslint": "^8.16.0",
     "eslint-config-next": "^12.1.6",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-functional": "^4.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prefer-type-alias": "^0.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-storybook": "^0.5.12",
     "i18next": "^21.8.4",
@@ -62,9 +67,15 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.4.1",
+    "postcss": "^8.4.14",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.6.2",
     "react-i18next": "^11.16.9",
     "react-test-renderer": "^18.1.0",
+    "stylelint": "^14.8.5",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
     "ts-jest": "^28.0.3",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.6.4"
@@ -72,7 +83,8 @@
   "lint-staged": {
     "*.{js,ts,jsx,tsx}": [
       "eslint . --fix",
-      "prettier . --write"
+      "prettier . --write",
+      "stylelint src/**/*.{ts,tsx} --fix"
     ]
   }
 }
