--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "next": "^12.1.6",
     "next-i18next": "^11.0.0",
     "react": "^18.1.0",
