docs: add tooltip stories

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,6 +20,7 @@
   "exclude": [
     "node_modules",
     ".storybook",
+    "src/utils-stories",
     "src/utils-tests",
     "src/__stories__/**",
     "src/__tests__/**",
